welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:7: error: not found: value leverBrosse
                leverBrosse()
                ^