welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() { baisseBrosse()
                for (i<- 1 to 4) {
                  avance()
                  avance()
                  gauche()
                }
                leverBrosse()
                
  
}

for (i <- 1 to 4)
{dogHouse()}
    for (j <- 1 to 4)
{avance()}